Add link to mirror route on index and Add component tests to voice-mirror

--- a/app/components/voice-mirror/template.hbs
+++ b/app/components/voice-mirror/template.hbs
@@ -1,4 +1,4 @@
 <h1>Voice Mirror</h1>
 
-<input type="button" value="Start Voice Mirror" {{on "click" start}}>
-<input type="button" value="Pause Voice Mirror" {{on "click" stop}}>
+<input type="button" data-test-start-voice-mirror value="Start" {{on "click" start}}>
+<input type="button" data-test-pause-voice-mirror value="Pause" {{on "click" stop}}>
