--- a/app/components/voice-mirror/template.hbs
+++ b/app/components/voice-mirror/template.hbs
@@ -1,4 +1,4 @@
 <h1>Voice Mirror</h1>
 
-<input type="button" data-test-start-voice-mirror value="Start" {{on "click" start}}>
-<input type="button" data-test-pause-voice-mirror value="Pause" {{on "click" stop}}>
+<input type="button" data-test-start-voice-mirror value="Start" {{on "click" this.start}}>
+<input type="button" data-test-pause-voice-mirror value="Pause" {{on "click" this.stop}}>
