--- a/app/components/voice-mirror/template.hbs
+++ b/app/components/voice-mirror/template.hbs
@@ -4,5 +4,5 @@
   <input type="button" data-test-start-voice-mirror value="Start" {{on "click" this.start}}>
   <input type="button" data-test-pause-voice-mirror value="Pause" {{on "click" this.stop}}>
 {{else}}
-  <h2>You still did not give me permission to access your mic :(.</h2>
+  <h2 data-test-voice-error-message>You did not give me permission to access your mic :(.</h2>
 {{/if}}
