--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,7 +1,41 @@
-<h3>Implemented Routes</h3> 
+<div class="bg-blue-100 flex flex-col">
+  <div class="flex justify-end mr-10 mt-4">
+    <span class="mr-4">Brazil</span>
+    <span>USA</span>
+  </div>
+
+  <div class="w-full flex justify-center items-center mt-8 mb-20">
+    <img role="presentation" alt="" class="rounded-full border-2 border-blue-900"
+      src="https://avatars.githubusercontent.com/u/20529578?v=4" />
+    <div class="ml-20">
+      <h1 class="text-5xl font-bold	text-blue-900">Mateus Valgueiro</h1>
+
+      <ul class="text-2xl">
+        <li class="mt-10">
+          🎓 Graduated in Computer Engineering at CIn - UFPE
+        </li>
+
+        <li class="mt-5">
+          💻 Working as a Software Engineer at C.E.S.A.R
+        </li>
+
+        <li class="mt-5">
+          📍 Recife - Pernambuco - Brazil
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+<h3>Implemented Routes</h3>
 <ul>
-    <li>
-      <LinkTo @route="mirror">Voice Mirror</LinkTo>
-    </li>
+  <li>
+    <LinkTo @route="mirror">Voice Mirror</LinkTo>
+  </li>
 </ul>
 
+
+<footer class="footer bg-blue-100 text-center">
+  Developed with 💙 and EmberJs by me
+</footer>
