--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="bg-gray-50">
+    {{outlet}}
+</div>
+
+
+<footer class="footer bg-blue-100 text-center">
+  Developed with 💙 and EmberJs by me
+</footer>
