--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,7 +1,7 @@
 <div class="bg-blue-100 flex flex-col">
   <div class="flex justify-end mr-10 mt-4">
-    <span class="mr-4"><img class="flag" src="usa.png" /></span>
-    <span><img class="flag" src="brazil.png" /></span>
+    <span class="mr-4"><img class="flag" alt="USA flag" src="usa.png" /></span>
+    <span><img class="flag"  alt="Brazillian flag" src="brazil.png" /></span>
   </div>
 
   <div class="w-full flex justify-center items-center mt-8 mb-20">
