--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<div class="container mx-auto flex flex-col justify-center mt-10 pb-10">
+<div class="container mx-auto flex flex-col mt-10 pb-10">
   <h3 class="text-4xl font-bold	text-center text-blue-900">Apps</h3>
   <ul class="mt-4">
     {{#each this.model as |app|}}
