style: Change to the roboto font family

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -19,7 +19,7 @@
           💻 Working as a Software Engineer at C.E.S.A.R
         </li>
 
-        <li class="ml-1.5 mt-5">
+        <li class="mt-5">
           📍 Recife - Pernambuco - Brazil
         </li>
       </ul>
