--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 body {
   margin: 0px;
+  font-family: 'Roboto', sans-serif !important;
 }
 
 .flag {
