style: fix footer position

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,8 +1,7 @@
-<div class="bg-gray-50">
-    {{outlet}}
+<div class="relative min-h-screen">
+  {{outlet}}
+
+  <footer class="absolute bottom-0 bg-blue-100 p-2 w-full text-center">
+    Developed with 💙 and EmberJs by me
+  </footer>
 </div>
-
-
-<footer class="footer bg-blue-100 text-center">
-  Developed with 💙 and EmberJs by me
-</footer>
